2008-11-04  Ross Burton  <ross@linux.intel.com>

	* configure.in:
	* NEWS:
	Version 2.25.1.

2008-09-24  Ross Burton  <ross@linux.intel.com>

	* data/sound-juicer.desktop.in.in:
	Remove Encoding field, it isn't required (#551946, thanks Pacho Ramos).

2008-09-24  Ross Burton  <ross@linux.intel.com>

	* data/sound-juicer.desktop.in.in:
	Add Audio to the categories (#552090, Patryk Zawadzki)

2008-09-08  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Correctly parse CDDA URLs (#550131, thanks Matthew Martin).

2008-09-05  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-metadata-musicbrainz3.c:
	* libjuicer/sj-metadata-cdtext.c:
	Don't store the album list in a private field any more (not
	required now), and especially don't free it when the app is still
	using it.

2008-09-04  Bastien Nocera  <hadess@hadess.net>

	* libjuicer/sj-metadata-cdtext.c (cdtext_list_albums):
	Remove some TODO items

	* libjuicer/sj-metadata-musicbrainz3.c:
	* libjuicer/sj-metadata.c (sj_metadata_helper_check_media):
	* libjuicer/sj-structures.c (album_details_free):
	Fixes for rhythmbox compilation

2008-09-04  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Make libcdio an optional library again,
	it would conflict with the GPL + exception license

	* libjuicer/Makefile.am:
	* libjuicer/sj-metadata-getter.c (lookup_cd):
	* libjuicer/sj-metadata-gvfs.c (device_to_cdda_uri),
	(gvfs_list_albums), (sj_metadata_gvfs_get_property),
	(sj_metadata_gvfs_set_property), (sj_metadata_gvfs_finalize),
	(sj_metadata_gvfs_init), (metadata_iface_init),
	(sj_metadata_gvfs_class_init), (sj_metadata_gvfs_new):
	* libjuicer/sj-metadata-gvfs.h: Add a gvfs based metadata
	reader, for fallback support

2008-09-04  Bastien Nocera  <hadess@hadess.net>

	* libjuicer/sj-error.c:
	* libjuicer/sj-error.h:
	* libjuicer/sj-structures.c:
	* libjuicer/sj-structures.h: Relicense those 4 files under
	the LGPL, see #550481 for details

2008-09-04  Bastien Nocera  <hadess@hadess.net>
