@@ -1,3 +1,10 @@
+2008-11-28  Bastien Nocera  <hadess@hadess.net>
+
+	* tests/Makefile.am:
+	* tests/mb-test.c (main): Call i18n functions so UTF-8
+	output works as expected (See
+	http://bugzilla.gnome.org/show_bug.cgi?id=559383#c4 )
+
 2008-11-04  Ross Burton  <ross@linux.intel.com>
 
 	* configure.in:
